test/functional/failtests/classes/attributeAttributes.txt
TypeError: Cannot apply attributes to aliased types
1 | object Foo<x> {
2 |     x<int>:bar; # x cannot have attributes
  |     ^ (2:5)
3 | }

